force-app/main/default/objects/COE_Threshold__c/COE_Threshold__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For COE Threshold report</description>
    <label>COE Threshold</label>
</CustomObject>