force-app/main/default/objects/COE_Threshold__c/fields/Category_A__c.field-meta.xml
<CustomField>
    <fullName>Category_A__c</fullName>
    <label>Category A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>