force-app/main/default/objects/COE_Threshold__c/fields/Category_B__c.field-meta.xml
<CustomField>
    <fullName>Category_B__c</fullName>
    <label>Category B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>