force-app/main/default/objects/COE_Threshold__c/fields/Other_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Direct_Cost__c</fullName>
    <label>Other Direct Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>